--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "prettier": "2.8.7"
+    "prettier": "2.8.7",
+    "prettier-stylelint": "^0.4.2",
+    "stylelint": "^15.4.0",
+    "stylelint-config-standard": "^32.0.0",
+    "stylelint-config-standard-scss": "^8.0.0"
   },
   "dependencies": {
     "sass": "^1.62.0"
